# boxer

./: .env.company.example  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.local/: README.md  deploy_ec2.sh
boxer/: __init__.py  answering.py
boxer/company/: notion_links.py  notion_playbooks.py  retrieval_rules.py  settings.py  team_chat_context.py
boxer/context/: builder.py  entries.py  windowing.py
boxer/core/: llm.py  retrieval_synthesis.py  settings.py  utils.py
boxer/observability/: request_audit.py  request_log.py  sqlite_store.py
boxer/retrieval/: __init__.py  knowledge.py
boxer_adapter_slack/: README.md  __init__.py  common.py  context.py  factory.py  pyproject.toml
boxer_adapter_web/: README.md  __init__.py  app.py  auth.py  bootstrap_admin.py  chat.py  knowledge.py  policies.py  pyproject.toml  realtime.py  runtime.py  schemas.py  security.py  settings.py  storage.py  workflows.py
boxer_company/: README.md  daily_device_round.py  daily_recordings_report.py  device_health_sheet.py  hpa_change_workflow.py  notion_links.py  notion_playbooks.py  notion_workspace_search.py  pyproject.toml  redis_device_state.py  retrieval_rules.py  settings.py  sms_delivery.py  team_chat_context.py  thread_playbook_learning.py  weekly_recordings_report.py
boxer_company/assistant/: __init__.py  answer_composer.py  barcode_log_route.py  barcode_query_route.py  commonmark.py  contracts.py  dependency_errors.py  device_led_routes.py  knowledge_routes.py  notion_answer_safety.py  notion_route.py  recording_failure_route.py  runtime.py  scope_guard.py  service.py  structured_route.py
boxer_company/routers/: barcode_log.py  barcode_validation.py  box_db.py  device_audio_probe.py  device_diagnostics.py  device_file_probe.py  device_led_log.py  device_log_upload.py  device_status_probe.py  device_update.py  mda_graphql.py  recording_failure_analysis.py  recording_streaming_restore.py  request_log_query.py  ssh_command.py  usage_help.py
boxer_company_adapter_slack/: README.md  __init__.py  admin_routes.py  assistant_bridge.py  barcode_logs.py  barcode_query_routes.py  barcode_routes.py  company.py  company_notion_routes.py  daily_device_round_reporter.py  daily_recordings_reporter.py  device_activity.py  device_health_monitor_reporter.py  device_notification_alert_reporter.py  device_routes.py  fun.py  health.py  hpa_change_reporter.py  hpa_change_routes.py  hpa_change_runtime.py  knowledge_routes.py  notion_freeform.py  pyproject.toml  recording_failure_routes.py  security_review_routes.py  sms_delivery_reporter.py  startup_guard.py  structured_routes.py  thread_learning_routes.py  weekly_recordings_reporter.py  weekly_reports.py
examples/: embed_widget.html  web_config.sample.json
scripts/: smoke_sample_adapter.sh  verify_open_core_boundary.sh
tests/: __init__.py  test_adapter_factory.py  test_barcode_log_video_status.py  test_box_db_lookup.py  test_context.py  test_daily_recordings_report.py  test_daily_recordings_report_mention.py  test_daily_recordings_reporter.py  test_device_audio_probe.py  test_device_query_routing.py  test_device_status_probe.py  test_device_update.py  test_notion_doc_fallback.py  test_notion_followup_routing.py  test_notion_links.py  test_notion_playbooks.py  test_prompt_security.py  test_pyproject_boundaries.py  test_request_log.py  test_slack_common.py  test_team_chat_context.py  test_weekly_recordings_report.py  test_weekly_recordings_report_mention.py  test_weekly_recordings_reporter.py
tests/company/: __init__.py  (+54 more)
widget/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.sdk.json  vite.config.ts
(+44 files in other folders)
