[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boxer"
version = "0.1.0"
description = "Open-core retrieval-grounded assistant bot framework with domain-specific adapters."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["llm", "retrieval", "assistant", "rga", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "python-dotenv==1.1.1",
  "anthropic==0.74.1",
  "pymysql==1.1.1",
  "boto3==1.34.162",
]

[project.urls]
Repository = "https://github.com/firstquarter-J/boxer"

[tool.setuptools.packages.find]
include = [
  "boxer",
  "boxer.*",
]
